# kerrighed-tools

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.Net  autogen.sh  clean.sh  configure.ac  install-sh  linux_version.sh
debian/: README.Debian  build-env  changelog  control  copyright  kerrighed-tests.install  kerrighed-tools.install  kerrighed-tools.postinst  kerrighed-tools.postrm  kerrighed.docs  libkerrighed-dev.install  libkerrighed1.install  rules
debian/overrides/: default  kerrighed-tests
kernel/: Makefile.am
libs/: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  clean.sh  configure.ac  kerrighed.py
libs/include/: Makefile.am  Makefile.in  capabilities.h  capability.h  checkpoint.h  hotplug.h  ipc.h  kerrighed.h  kerrighed_tools.h  krgnodemask.h  libkrgcb.h  libkrgcheckpoint.h  migration.h  proc.h  types.h
libs/libkerrighed/: Makefile.am  Makefile.in  kerrighed.pc.in  libcapability.c  libhotplug.c  libipc.c  libkerrighed_tools.c  libproc.c
libs/libkerrighed/.libs/: libkerrighed.la  libkerrighed.lai  libkerrighed.so.1.0.0
libs/libkrgcb/: Makefile.am  krgcb.pc.in  libkrgcb.c
libs/libkrgcheckpoint/: Makefile.am  krgcheckpoint.pc.in  libkrgcheckpoint.c
man/: .gitignore  Makefile.am  Makefile.in  checkpoint.1.xml  ipccheckpoint.1.xml  ipcrestart.1.xml  kerrighed.7.xml  kerrighed_capabilities.7.xml  kerrighed_nodes.5.xml  krgadm.1.xml  krgcapset.1.xml  krgcapset.2.xml  krgcr-run.1.xml  manual-man.xsl  manual-xhtml.xsl  migrate.1.xml  migrate.2.xml  migrate_self.2.xml  restart.1.xml
modules/: .gitignore  COPYRIGHT  CodingStyle  Kbuild  Makefile.in
modules/capability/: Kbuild  capability.c  capability.h  debug_capability.h
modules/ctnr/: Kbuild  ctnr.c  debug_kddm.c  debug_kddm.h  io_linker.c  io_linker.h  kddm.h  kddm_bench.c  kddm_find_object.c  kddm_find_object.h  kddm_flush_object.c  kddm_flush_object.h  kddm_get_object.c  kddm_get_object.h  kddm_grab_object.c  kddm_grab_object.h  kddm_hotplug.c  kddm_put_object.c  kddm_put_object.h  kddm_remove_object.c  kddm_remove_object.h  kddm_set.c  kddm_set.h  kddm_set_object.c  kddm_set_object.h  kddm_sync_object.c  kddm_sync_object.h  kddm_tree.c  kddm_types.h  mobility.c  mobility.h  name_space.c  name_space.h  object.c  object.h  object_server.c  object_server.h  procfs.c  procfs.h  protocol_action.c  (+1 more)
modules/epm/: Kbuild  action.c  action.h  checkpoint.c  checkpoint.h  debug_epm.h  epm.c  epm_hotplug.c  epm_internal.h  fork_delay.c  fork_delay.h  g_signal.c  g_signal.h  ghost_arch.h  ghost_process_api.c  ghost_process_api.h  ghost_process_management.c  ghost_process_management.h  krg_ptrace.c  migration.c  migration.h  migration_api.c  migration_api.h  migration_types.h  procfs.c  restart.c  restart.h
modules/fs/: Kbuild  debug_fs.c  debug_fs.h  file.c  file.h  file_struct_io_linker.c  file_struct_io_linker.h  (+7 more)
patches/: .gitignore  Makefile.am  Makefile.in
scripts/: .gitignore  Makefile.am  Makefile.in  kerrighed.completion  kerrighed.default.in  krg_legacy_scheduler  update-rc
scripts/default/: all  all.path
scripts/distros/CentOS/: initd
scripts/distros/Debian/: default  update-rc.d
scripts/distros/FedoraCore/: default.path
scripts/init.d/: debian  redhat
scripts/update-rc.d/: debian  redhat
tests/: AUTHORS  INSTALL  Makefile.am  Makefile.in  Makefile.libs  autogen.sh  configure.ac
tests/apps/: .gitignore  Bi.java  Makefile.am  Makefile.in  bi-clone-files.c  bi-clone-fs.c  bi-clone-semundo.c  bi-cr-disable.c  bi-cr.c  bi-double.c  bi-exclude-mm.c  bi-file.c  bi-pipe.c  bi-server-socket.c  bi-signal.c  bi-thread.c  bi.c  fchmod.c  fchown.c  fepoll.c  fmmap.c  fork-loop.c  ftruncate.c  futex-shm-tool.c  futimes.c  ipcmsg-tool.c  ipcsem-tool.c  ipcshm-tool.c  libbi.c  libbi.h  posixshm-tool.c  setsid-cr.c
tests/benchmark/: Makefile.am  Makefile.in  extractrmax.py
tests/include/: Makefile.am  Makefile.in  krg-tools.h  smp-tools.h  test-tools.h
tests/ktp/: .gitignore  Makefile.am  Makefile.in  krgltp-cr.sh.in  krgltp-smp.sh.in  slab-check
tests/ktp/cr/: Makefile.am  Makefile.in  cr-post  cr-pre  cr01  cr02  cr03  cr04  cr05  cr06  cr07  cr08  cr09  cr10  cr11  cr12  cr13  cr14  cr15  cr16  cr17  cr18  cr19  cr20  cr21  cr22  cr23  cr24  cr_abort01  cr_abort02  cr_blender  cr_callbacks01  cr_clone_files01  cr_clone_fs01  cr_clone_semundo01  cr_exclude_mm01  cr_freeze_unfreeze  cr_ipc_msg01  cr_ipc_sem01  cr_ipc_sem02  (+15 more)
tests/ktp/faf/: Makefile.am  check_leak  faf_chmod  faf_chown  faf_epoll  faf_mmap  faf_truncate  faf_utimes  lib_faf.sh
tests/ktp/futex/: Makefile.am  futex_shm01  lib_futex.sh
tests/ktp/uschedconfig/: Makefile.am  cpuspeed_probe.sh  load_probe.sh  local_user_presence.sh  processsize_probe.sh  user_probe.sh
tests/proc/: .gitignore  Makefile.am  Makefile.in  check_aragorn  display_mosix_load  fork_test.c  test_ordo  up-gs.c  up-gs_migr.c
tools/: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  checkpoint.c  configure.ac  ipccheckpoint.c  ipcrestart.c  kerrighed.completion  kerrighed.default  kerrighed.init  krg_legacy_scheduler  krg_memory_balanced_scheduler  krg_rbt_scheduler  krg_schedsetnodes  krgadm.c  krgboot.c  krgboot_helper  krgcapset.c  krgcr-run.c  krginit.c  krginit_helper  krginit_helper.conf  krginit_helper.conf.in  krginit_helper.in  krglog  migrate.c  net.conf  restart.c
tools-host/: .gitignore  Makefile.am  kerrighed-host.default.in  kerrighed-host.init  krgboot.c  krgboot_helper.in  krglog
tools-host/krgboot_helper-post.d/: 50net  50net.in
tools-host/krgboot_helper-pre.d/: 50net
tools/krginit_helper-post.d/: 20clusterip  20clusterip.in  50kerrighed_start
tools/krginit_helper-pre.d/: 10net  10net.in
tools/man/: checkpoint.1.xml  kerrighed_capabilities.7.xml  kerrighed_nodes.5.xml  krgadm.1.xml  krgcapset.1.xml  migrate_self.2.xml
tools/scripts/default/: all
tools/scripts/distros/Debian/: initd
tools/scripts/distros/FedoraCore/: initd.path  update-rc.d
tools/scripts/init.d/: all.path
tools/scripts/update-rc.d/: redhat
tools/src/: Makefile.am  Makefile.in  restart.c
(+251 files in other folders)
