### Makefile.am for kerrighed libraries
###
### Copyright 2006-2007 INRIA, All rights reserved
### Copyright 2009 Kerlabs, All rights reserved
###
### Author:
###   Jean Parpaillon <jean.parpaillon@kerlabs.com>
###
if BUILD_LIBKERRIGHED
LIBKERRIGHED = libkerrighed
endif
SUBDIRS= include $(LIBKERRIGHED)

CLEANFILES =
