### Makefile.am for kerrighed libraries
###
### Copyright 2006-2007 INRIA, All rights reserved
### Copyright 2009 Kerlabs, All rights reserved
###
### Authors:
###        Jean Parpaillon <jean.parpaillon@kerlabs.com>
###
SUBDIRS= include libkerrighed libkrgcb libkrgcheckpoint

if ENABLE_PYTHON
python_PYTHON = kerrighed.py
endif
